--- a/index.html
+++ b/index.html
@@ -23,17 +23,11 @@
       <div class="text-center orange fz-25 mg-bt-15">
         Comida cerca de ti
       </div>
-      <div class="input-group col-xs-12">
-        <input type="text" class="form-control" aria-label="aaa">
-        <div class="input-group-btn">
-          <!-- Button and dropdown menu -->
-        </div>
-     </div>
-
-
-
-
-
+      <div class="row">
+        <div class="input-group col-xs-offset-1 col-xs-10">
+          <input type="text" class="form-control" aria-label="aaa">
+       </div>
+      </div>
 
     </div>
 
