--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Asul" rel="stylesheet">
   <!--Import bootstrap css-->
   <link type="text/css" rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css" />
   <!-- main.css-->
@@ -13,10 +13,11 @@
   </head>
   <body>
     <div id="splash"class="flex-center-center bg-black">
-      <p class=" orange fz-45">Foodmap</p>
+      <p id="logo" class=" orange fz-45">Foodmap <i class="fa fa-utensils"></i></p>
     </div>
 
 <!--Import jQuery -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script type="text/javascript" src="vendors/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
